TASK-35 completed: bug fixes for overflow scroll and card.component side

--- a/src/pages/game/components/hand-card/hand-card.component.scss
+++ b/src/pages/game/components/hand-card/hand-card.component.scss
@@ -1,7 +1,7 @@
 .qcg-hand-card {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, Helvetica, sans-serif;
     margin: 1em 0;
-    width: 100%;
+    width: 10em;
     background: linear-gradient(194deg,rgba(230, 230, 230, 1) 10%,rgba(144, 144, 144, 1) 79%);
     border-radius: 1em;
     border: 0.3em solid black;
