--- a/src/pages/game/game.page.scss
+++ b/src/pages/game/game.page.scss
@@ -1,8 +1,6 @@
 .qcg-game-page {
     background: linear-gradient(to right,#1565C0,#b92b27);;
     height: 100vh;
-    overflow: hidden;
-    scroll-behavior: smooth;
 
     ion-fab {
         top: 1em;
